{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 30,
  "lineage": "3a7405e1-4363-b687-0449-143f745d9c22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_ip_nat_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee3f7da4408ad3a2",
            "arn": "arn:aws:ec2:us-east-1:590183754168:elastic-ip/eipalloc-0ee3f7da4408ad3a2",
            "association_id": "eipassoc-0dfca0a44fa5bdf7e",
            "domain": "vpc",
            "id": "eipalloc-0ee3f7da4408ad3a2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0223a55062cc3c0b6",
            "private_dns": "ip-10-0-1-247.ec2.internal",
            "private_ip": "10.0.1.247",
            "public_dns": "ec2-3-224-129-79.compute-1.amazonaws.com",
            "public_ip": "3.224.129.79",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "eipalloc-0ee3f7da4408ad3a2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_ip_nat_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2b90d0d2043490f",
            "arn": "arn:aws:ec2:us-east-1:590183754168:elastic-ip/eipalloc-0a2b90d0d2043490f",
            "association_id": "eipassoc-02c368af1f6db19e0",
            "domain": "vpc",
            "id": "eipalloc-0a2b90d0d2043490f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f446eadf3d9bf3a5",
            "private_dns": "ip-10-0-2-197.ec2.internal",
            "private_ip": "10.0.2.197",
            "public_dns": "ec2-98-82-213-104.compute-1.amazonaws.com",
            "public_ip": "98.82.213.104",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "eipalloc-0a2b90d0d2043490f",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:internet-gateway/igw-0c608c4a95d98d612",
            "id": "igw-0c608c4a95d98d612",
            "owner_id": "590183754168",
            "region": "us-east-1",
            "tags": {
              "Name": "tf-vpc-igw"
            },
            "tags_all": {
              "Name": "tf-vpc-igw"
            },
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "igw-0c608c4a95d98d612",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_natgateway_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee3f7da4408ad3a2",
            "association_id": "eipassoc-0dfca0a44fa5bdf7e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-007fc9becfc9f8046",
            "network_interface_id": "eni-0223a55062cc3c0b6",
            "private_ip": "10.0.1.247",
            "public_ip": "3.224.129.79",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0883e68e228189a1b",
            "tags": {
              "Name": "tf-natgw-1a"
            },
            "tags_all": {
              "Name": "tf-natgw-1a"
            },
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "nat-007fc9becfc9f8046",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.tf_ip_nat_1a",
            "aws_internet_gateway.tf_igw",
            "aws_subnet.subnet_public_1a",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_natgateway_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a2b90d0d2043490f",
            "association_id": "eipassoc-02c368af1f6db19e0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-047949e7e69ac0827",
            "network_interface_id": "eni-0f446eadf3d9bf3a5",
            "private_ip": "10.0.2.197",
            "public_ip": "98.82.213.104",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b8b6d4dc6f385966",
            "tags": {
              "Name": "tf-natgw-1b"
            },
            "tags_all": {
              "Name": "tf-natgw-1b"
            },
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "nat-047949e7e69ac0827",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.tf_ip_nat_1b",
            "aws_internet_gateway.tf_igw",
            "aws_subnet.subnet_public_1b",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:route-table/rtb-079d837f6ffdadb84",
            "id": "rtb-079d837f6ffdadb84",
            "owner_id": "590183754168",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-007fc9becfc9f8046",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-rt-1a"
            },
            "tags_all": {
              "Name": "tf-private-rt-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "rtb-079d837f6ffdadb84",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.tf_ip_nat_1a",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_natgateway_1a",
            "aws_subnet.subnet_public_1a",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_private_rt_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:route-table/rtb-01f4083b95962f2ac",
            "id": "rtb-01f4083b95962f2ac",
            "owner_id": "590183754168",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-047949e7e69ac0827",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-rt-1b"
            },
            "tags_all": {
              "Name": "tf-private-rt-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "rtb-01f4083b95962f2ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.tf_ip_nat_1b",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_natgateway_1b",
            "aws_subnet.subnet_public_1b",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:route-table/rtb-001d07c12a9b62127",
            "id": "rtb-001d07c12a9b62127",
            "owner_id": "590183754168",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c608c4a95d98d612",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-public-rt"
            },
            "tags_all": {
              "Name": "tf-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "rtb-001d07c12a9b62127",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028275b4cbfc9b268",
            "region": "us-east-1",
            "route_table_id": "rtb-079d837f6ffdadb84",
            "subnet_id": "subnet-0bf766e9d98b75eb3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "rtbassoc-028275b4cbfc9b268",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.tf_ip_nat_1a",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_natgateway_1a",
            "aws_route_table.tf_private_rt_1a",
            "aws_subnet.subnet_private_1a",
            "aws_subnet.subnet_public_1a",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053d1b66e7954a209",
            "region": "us-east-1",
            "route_table_id": "rtb-01f4083b95962f2ac",
            "subnet_id": "subnet-09bb92c5386b5784a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "rtbassoc-053d1b66e7954a209",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.tf_ip_nat_1b",
            "aws_internet_gateway.tf_igw",
            "aws_nat_gateway.tf_natgateway_1b",
            "aws_route_table.tf_private_rt_1b",
            "aws_subnet.subnet_private_1b",
            "aws_subnet.subnet_public_1b",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06347e238837a0a7f",
            "region": "us-east-1",
            "route_table_id": "rtb-001d07c12a9b62127",
            "subnet_id": "subnet-0883e68e228189a1b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "rtbassoc-06347e238837a0a7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_rt",
            "aws_subnet.subnet_public_1a",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf999aee89262e0d",
            "region": "us-east-1",
            "route_table_id": "rtb-001d07c12a9b62127",
            "subnet_id": "subnet-0b8b6d4dc6f385966"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "rtbassoc-0bf999aee89262e0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_public_rt",
            "aws_subnet.subnet_public_1b",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:subnet/subnet-0bf766e9d98b75eb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf766e9d98b75eb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183754168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-tf-subnet-1a"
            },
            "tags_all": {
              "Name": "private-tf-subnet-1a"
            },
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "subnet-0bf766e9d98b75eb3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:subnet/subnet-09bb92c5386b5784a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bb92c5386b5784a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183754168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-tf-subnet-1b"
            },
            "tags_all": {
              "Name": "private-tf-subnet-1b"
            },
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "subnet-09bb92c5386b5784a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:subnet/subnet-0883e68e228189a1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0883e68e228189a1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183754168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-tf-subnet-1a"
            },
            "tags_all": {
              "Name": "public-tf-subnet-1a"
            },
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "subnet-0883e68e228189a1b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:subnet/subnet-0b8b6d4dc6f385966",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8b6d4dc6f385966",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183754168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-tf-subnet-1b"
            },
            "tags_all": {
              "Name": "public-tf-subnet-1b"
            },
            "vpc_id": "vpc-01652b895e7ba50e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "subnet-0b8b6d4dc6f385966",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183754168:vpc/vpc-01652b895e7ba50e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbb445e5b9612937",
            "default_route_table_id": "rtb-01381e215230b2d0f",
            "default_security_group_id": "sg-016038983da64a81b",
            "dhcp_options_id": "dopt-04be75b36a4bcf678",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01652b895e7ba50e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01381e215230b2d0f",
            "owner_id": "590183754168",
            "region": "us-east-1",
            "tags": {
              "Name": "clc15-tf-vpc"
            },
            "tags_all": {
              "Name": "clc15-tf-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183754168",
            "id": "vpc-01652b895e7ba50e5",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}